[package]
name = "aoc"
version = "0.1.0"
authors = ["Christian Persson <saser@live.se>"]

[dependencies]
clap = "~2.29.0"
base = { path = "../base" }
day01 = { path = "../day01" }
day02 = { path = "../day02" }
day03 = { path = "../day03" }
day04 = { path = "../day04" }
day05 = { path = "../day05" }
day06 = { path = "../day06" }
day07 = { path = "../day07" }
day08 = { path = "../day08" }
day09 = { path = "../day09" }
