cc_library(
    name = "day01",
    hdrs = ["day01.h"],
    srcs = ["day01.cc"],
    deps = ["//:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day01",
        "@googletest//:gtest_main",
    ],
    data = ["//year2019:testdata/01"],
)

cc_library(
    name = "benchmark",
    hdrs = ["benchmark.h"],
    deps = [
        ":day01",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//year2019:testdata/01"],
    visibility = ["//visibility:public"],
)
