cc_library(
    name = "day01",
    hdrs = ["day01.h"],
    srcs = ["day01.cc"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day01",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/01"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day01",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/01"],
)
