cc_library(
    name = "day02",
    hdrs = ["day02.h"],
    srcs = ["day02.cc"],
    deps = [
        "@abseil//absl/strings:strings",
        "//:adventofcode",
        "//year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day02",
        "@googletest//:gtest_main",
    ],
    data = ["//year2019:testdata/02"],
)

cc_library(
    name = "benchmark",
    hdrs = ["benchmark.h"],
    deps = [
        ":day02",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//year2019:testdata/02"],
    visibility = ["//visibility:public"],
)
