cc_library(
    name = "day02",
    hdrs = ["day02.h"],
    srcs = ["day02.cc"],
    deps = [
        "@abseil//absl/strings:strings",
        "//cpp:adventofcode",
        "//cpp/year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day02",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/02"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day02",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/02"],
)
