cc_library(
    name = "day03",
    hdrs = ["day03.h"],
    srcs = ["day03.cc"],
    deps = [
        "@abseil//absl/strings:strings",
        "//:adventofcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day03",
        "@googletest//:gtest_main",
    ],
    data = glob(["testdata/*"]) + ["//year2019:testdata/03"],
)

cc_library(
    name = "benchmark",
    hdrs = ["benchmark.h"],
    deps = [
        ":day03",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//year2019:testdata/03"],
    visibility = ["//visibility:public"],
)
