cc_library(
    name = "day03",
    hdrs = ["day03.h"],
    srcs = ["day03.cc"],
    deps = [
        "@abseil//absl/strings:strings",
        "//cpp:adventofcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day03",
        "@googletest//:gtest_main",
    ],
    data = glob(["testdata/*"]) + ["//inputs:2019/03"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day03",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/03"],
)
