load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "day03",
    srcs = ["day03.cc"],
    hdrs = ["day03.h"],
    deps = [
        "//cpp:adventofcode",
        "@abseil//absl/strings",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    data = glob(["testdata/*"]) + ["//inputs:2019/03"],
    deps = [
        ":day03",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    data = ["//inputs:2019/03"],
    deps = [
        ":day03",
        "@googlebenchmark//:benchmark_main",
    ],
)
