cc_library(
    name = "day04",
    hdrs = ["day04.h"],
    srcs = ["day04.cc"],
    deps = [
        "@abseil//absl/strings:strings",
        "//:adventofcode",
        ":internal",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day04",
        "@googletest//:gtest_main",
    ],
    data = ["//year2019:testdata/04"],
)

cc_library(
    name = "internal",
    hdrs = ["internal.h"],
    srcs = ["internal.cc"],
)

cc_test(
    name = "internal_test",
    srcs = ["internal_test.cc"],
    deps = [
        ":internal",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day04",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//year2019:testdata/04"],
)
