load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "day04",
    srcs = ["day04.cc"],
    hdrs = ["day04.h"],
    deps = [
        ":internal",
        "//cpp:adventofcode",
        "@abseil//absl/strings",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    data = ["//inputs:2019/04"],
    deps = [
        ":day04",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "internal",
    srcs = ["internal.cc"],
    hdrs = ["internal.h"],
)

cc_test(
    name = "internal_test",
    srcs = ["internal_test.cc"],
    deps = [
        ":internal",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    data = ["//inputs:2019/04"],
    deps = [
        ":day04",
        "@googlebenchmark//:benchmark_main",
    ],
)
