cc_library(
    name = "day05",
    hdrs = ["day05.h"],
    srcs = ["day05.cc"],
    deps = [
        "@abseil//absl/strings:str_format",
        "//cpp:adventofcode",
        "//cpp/year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day05",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/05"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day05",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/05"],
)
