load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "day05",
    srcs = ["day05.cc"],
    hdrs = ["day05.h"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode",
        "@abseil//absl/strings:str_format",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    data = ["//inputs:2019/05"],
    deps = [
        ":day05",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    data = ["//inputs:2019/05"],
    deps = [
        ":day05",
        "@googlebenchmark//:benchmark_main",
    ],
)
