cc_library(
    name = "day06",
    hdrs = ["day06.h"],
    srcs = ["day06.cc"],
    deps = [
        "@abseil//absl/strings:strings",
        "//cpp:adventofcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day06",
        "@googletest//:gtest_main",
    ],
    data = glob(["testdata/*"]) + ["//inputs:2019/06"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day06",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/06"],
)
