load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "day06",
    srcs = ["day06.cc"],
    hdrs = ["day06.h"],
    deps = [
        "//cpp:adventofcode",
        "@abseil//absl/strings",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    data = glob(["testdata/*"]) + ["//inputs:2019/06"],
    deps = [
        ":day06",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    data = ["//inputs:2019/06"],
    deps = [
        ":day06",
        "@googlebenchmark//:benchmark_main",
    ],
)
