cc_library(
    name = "day07",
    hdrs = ["day07.h"],
    srcs = ["day07.cc"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day07",
        "@googletest//:gtest_main",
    ],
    data = glob(["testdata/*"]) + ["//inputs:2019/07"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day07",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/07"],
)
