cc_library(
    name = "day08",
    hdrs = ["day08.h"],
    srcs = ["day08.cc"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day08",
        "@googletest//:gtest_main",
    ],
    data = glob(["testdata/*"]) + ["//inputs:2019/08"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day08",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/08"],
)
