cc_library(
    name = "day09",
    hdrs = ["day09.h"],
    srcs = ["day09.cc"],
    deps = ["//:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day09",
        "@googletest//:gtest_main",
    ],
    data = ["//year2019:testdata/09"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day09",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//year2019:testdata/09"],
)
