cc_library(
    name = "day09",
    hdrs = ["day09.h"],
    srcs = ["day09.cc"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day09",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/09"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day09",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/09"],
)
