load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "day09",
    srcs = ["day09.cc"],
    hdrs = ["day09.h"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    data = ["//inputs:2019/09"],
    deps = [
        ":day09",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    data = ["//inputs:2019/09"],
    deps = [
        ":day09",
        "@googlebenchmark//:benchmark_main",
    ],
)
