cc_library(
    name = "day10",
    hdrs = ["day10.h"],
    srcs = ["day10.cc"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day10",
        "@googletest//:gtest_main",
    ],
    data = glob(["testdata/*"]) + ["//inputs:2019/10"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day10",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/10"],
)
