cc_library(
    name = "day12",
    hdrs = ["day12.h"],
    srcs = ["day12.cc"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day12",
        "@googletest//:gtest_main",
    ],
    data = glob(["testdata/*"]) + ["//inputs:2019/12"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day12",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/12"],
)
