cc_library(
    name = "day14",
    hdrs = ["day14.h"],
    srcs = ["day14.cc"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day14",
        "@googletest//:gtest_main",
    ],
    data = glob(["testdata/*"]) + ["//inputs:2019/14"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day14",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/14"],
)
