cc_library(
    name = "day15",
    hdrs = ["day15.h"],
    srcs = ["day15.cc"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day15",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/15"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day15",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/15"],
)
