cc_library(
    name = "day16",
    hdrs = ["day16.h"],
    srcs = ["day16.cc"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day16",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/16"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day16",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/16"],
)
