cc_library(
    name = "day17",
    hdrs = ["day17.h"],
    srcs = ["day17.cc"],
    deps = [
        "//:adventofcode",
        "//year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day17",
        "@googletest//:gtest_main",
    ],
    data = ["//year2019:testdata/17"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day17",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//year2019:testdata/17"],
)
