cc_library(
    name = "day17",
    hdrs = ["day17.h"],
    srcs = ["day17.cc"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day17",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/17"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day17",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/17"],
)
