cc_library(
    name = "day19",
    hdrs = ["day19.h"],
    srcs = ["day19.cc"],
    deps = [
        "//:adventofcode",
        "//year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day19",
        "@googletest//:gtest_main",
    ],
    data = ["//year2019:testdata/19"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day19",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//year2019:testdata/19"],
)
