cc_library(
    name = "day19",
    hdrs = ["day19.h"],
    srcs = ["day19.cc"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day19",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/19"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day19",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/19"],
)
