cc_library(
    name = "day20",
    hdrs = ["day20.h"],
    srcs = ["day20.cc"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day20",
        "@googletest//:gtest_main",
    ],
    data = glob(["testdata/*"]) + ["//inputs:2019/20"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day20",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/20"],
)
