cc_library(
    name = "day21",
    hdrs = ["day21.h"],
    srcs = ["day21.cc"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day21",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/21"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day21",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/21"],
)
