cc_library(
    name = "day22",
    hdrs = ["day22.h"],
    srcs = ["day22.cc"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day22",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/22"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day22",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/22"],
)
